{
  "browse": "بازار",
  "categories": "زمرہ جات",
  "saved": "محفوظ شدہ",
  "chat": "گفتگو",
  "profile": "میں",
  "myListings": "میری دکان",
  "createListing": "نیا اشتہار",
  "sellerDashboard": "بیچنے والے کا ڈیش بورڈ"
}
